Keep follow feed invisible works

--- a/popup.html
+++ b/popup.html
@@ -25,5 +25,16 @@
     </label>
 
     <p style="text-align: center" id="nameYear"></p>
+    <hr />
+    <div style="text-align: center; margin-top: 10px">
+      <a href="https://buymeacoffee.com/olivierlue8" target="_blank">
+        <img
+          src="https://cdn.buymeacoffee.com/buttons/v2/default-orange.png"
+          alt="Buy Me a Coffee"
+          width="150"
+          height="50"
+        />
+      </a>
+    </div>
   </body>
 </html>
