Add new page for distraction time table + Explore tablist removal

--- a/popup.html
+++ b/popup.html
@@ -24,6 +24,12 @@
       <span id="toggOnOff"></span>
     </label>
 
+    <div style="text-align: center; margin-top: 15px">
+      <button id="goToFAQ" title="See how much time per day you waste!">
+        Distraction Table </i>
+      </button>
+    </div>
+
     <p style="text-align: center" id="nameYear"></p>
     <hr />
     <div style="text-align: center; margin-top: 10px">
