--- a/pages/timetable.html
+++ b/pages/timetable.html
@@ -9,8 +9,32 @@
     <title>Distraction Table</title>
   </head>
   <body>
-    <h1>Distraction Table</h1>
-    <h3>Few how much time you waste on by consuming content created from others you follow</h3>
-    
+    <h1 style="text-align: center;">Distraction Table</h1>
+    <h3 style="text-align: center;">Few how much time you waste on by consuming content created from others you follow</h3>
+    <div class="statistics">
+      <table
+        style="
+          width: 50%;
+          border-collapse: collapse;
+          margin-top: 1rem;
+          font-family: Arial, sans-serif;
+          margin-left: auto;
+          margin-right: auto;
+        "
+      >
+        <thead>
+          <tr style="background-color: white;color: black;">
+            <th style="padding: 12px">Date</th>
+            <th style="padding: 12px">Amount of times</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td id="date" style="padding: 10px"></td>
+            <td id="amount" style="padding: 10px"></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </body>
 </html>
