--- a/popup.html
+++ b/popup.html
@@ -24,15 +24,19 @@
       <span id="toggOnOff"></span>
     </label>
 
-    <div style="text-align: center; margin-top: 15px">
-      <button id="goToFAQ" title="See how much time per day you waste!">
-        Distraction Table </i>
-      </button>
+    <h3 style="text-align: center;">Time of consumption</h3>
+    <div style="text-align: center; margin-top: -0.5rem" title="Click here to see how much time you waste each day!">
+      <button
+        id="goToFAQ"
+      ></button>
     </div>
 
     <p style="text-align: center" id="nameYear"></p>
     <hr />
-    <div style="text-align: center; margin-top: 10px">
+    <div
+      style="text-align: center; margin-top: 10px"
+      title="Do you want to support my project?"
+    >
       <a href="https://buymeacoffee.com/olivierlue8" target="_blank">
         <img
           src="https://cdn.buymeacoffee.com/buttons/v2/default-orange.png"
