--- a/pages/update.html
+++ b/pages/update.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="../logo.png" />
     <meta name="description" content="HTML5 website template" />
     <meta name="keywords" content="global, template, html, sass, jquery" />
-    <meta name="author" content="Bucky Maler" />
+    <meta name="author" content="Olivier Luethy" />
     <link rel="stylesheet" href="assets/css/main.css" />
   </head>
   <body>
@@ -86,7 +86,9 @@
                     <a>
                       <h3>URL Redirect if you consume on profile</h3>
                       <p>
-                        If you are consuming content within someone else's profile and you have switched off the apperence of the feed, you will not be able to access that part.
+                        If you are consuming content within someone else's
+                        profile and you have switched off the apperence of the
+                        feed, you will not be able to access that part.
                       </p>
                     </a>
                   </div>
@@ -95,17 +97,27 @@
               <li class="l-section section">
                 <div class="hire">
                   <h2>Are we missing out a feature?</h2>
-                  <button style="color: black;" onclick="window.location.href='https://forms.gle/1axFBPady7s7yhkP8'">Fill out this form</button>
-                  <h3>Just six brief questions are all we need to begin crafting your personalized feature.</h3>
+                  <button
+                    style="color: black"
+                    onclick="window.location.href='https://forms.gle/1axFBPady7s7yhkP8'"
+                  >
+                    Fill out this form
+                  </button>
+                  <h3>
+                    Just six brief questions are all we need to begin crafting
+                    your personalized feature.
+                  </h3>
                   <h2>How to contribute to our journey?</h2>
                   <!-- checkout formspree.io for easy form setup -->
                   <a
                     href="https://chromewebstore.google.com/detail/x-feed-cleaner/nejdcgfebfamlgpggncmbpkcnefaiemk/reviews"
                     ><button style="color: black">Write us a review</button></a
                   >
-                  <h2 style="margin-top: 2rem;">How to support us financialy?</h2>
+                  <h2 style="margin-top: 2rem">
+                    How to support us financialy?
+                  </h2>
                   <div
-                    style="text-align: center;"
+                    style="text-align: center"
                     title="Do you want to support my project?"
                   >
                     <a
@@ -179,13 +191,7 @@
       </ul>
     </div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-    <script>
-      window.jQuery ||
-        document.write(
-          '<script src="assets/js/vendor/jquery-2.2.4.min.js"><\/script>'
-        );
-    </script>
+    <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/functions-min.js"></script>
   </body>
 </html>
