Fix links for download + updated; Add popup fancy background linear gradient

--- a/pages/update.html
+++ b/pages/update.html
@@ -34,12 +34,7 @@
                 <img src="assets/img/logoResize.png" alt="Global" />
                 <p>X-Feed Cleaner</p>
               </a>
-              <button
-                onclick="window.location.href='https://chromewebstore.google.com/detail/x-feed-cleaner/nejdcgfebfamlgpggncmbpkcnefaiemk/reviews'"
-                class="header--cta cta"
-              >
-                Review Us
-              </button>
+              <button class="header--cta cta">Review Us</button>
               <div class="header--nav-toggle">
                 <span></span>
               </div>
@@ -60,7 +55,7 @@
                       <div class="introName">1.0.9</div>
                       is out!
                     </h1>
-                    <button onclick="window.location.href='https://x.com'">
+                    <button id="tryItOut">
                       Try it out NOW!
                       <span class="btn-background"></span>
                     </button>
@@ -97,10 +92,7 @@
               <li class="l-section section">
                 <div class="hire">
                   <h2>Are we missing out a feature?</h2>
-                  <button
-                    style="color: black"
-                    onclick="window.location.href='https://forms.gle/1axFBPady7s7yhkP8'"
-                  >
+                  <button id="formLink" style="color: black">
                     Fill out this form
                   </button>
                   <h3>
@@ -193,5 +185,6 @@
 
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/functions-min.js"></script>
+    <script src="update.js"></script>
   </body>
 </html>
