--- a/pages/update.html
+++ b/pages/update.html
@@ -15,8 +15,8 @@
     <!-- notification for small viewports and landscape oriented smartphones -->
     <div class="device-notification">
       <a class="device-notification--logo" href="#0">
-        <img src="assets/img/logo.png" alt="Global" />
-        <p>Global</p>
+        <img src="assets/img/logo.png" alt="Logo" />
+        <p>X-Feed Cleaner</p>
       </a>
       <p class="device-notification--message">
         Global has so much to offer that we must request you orient your device
@@ -52,7 +52,7 @@
                   <div class="intro--banner">
                     <h1>
                       Version<br />
-                      <div class="introName">1.0.9</div>
+                      <div class="introName">1.0.11</div>
                       is out!
                     </h1>
                     <button id="tryItOut">
