Add FAQ section + Show title of switch state

--- a/popup.html
+++ b/popup.html
@@ -24,11 +24,21 @@
       <span id="toggOnOff"></span>
     </label>
 
-    <h3 style="text-align: center;">Time of consumption</h3>
-    <div style="text-align: center; margin-top: -0.5rem" title="Click here to see how much time you waste each day!">
+    <h3 style="text-align: center">Time of consumption</h3>
+    <div
+      style="text-align: center; margin-top: -0.5rem"
+      title="Click here to see how much time you waste each day!"
+    >
+      <button id="timeConsumption"></button>
+    </div>
+
+    <div style="text-align: center">
       <button
         id="goToFAQ"
-      ></button>
+        title="Do you have a question? You'll find the answer here!"
+      >
+        FAQ Section &nbsp;<img src="pages/assets/img/questionmark.png" alt="" />
+      </button>
     </div>
 
     <p style="text-align: center" id="nameYear"></p>
