Bug that community isn't available when you wan tto see content is now available + See bookmarks content only if you enabled content view on popup

--- a/pages/update.html
+++ b/pages/update.html
@@ -52,7 +52,7 @@
                   <div class="intro--banner">
                     <h1>
                       Version<br />
-                      <div class="introName">1.0.11</div>
+                      <div class="introName">1.0.13</div>
                       is out!
                     </h1>
                     <button id="tryItOut">
@@ -64,26 +64,21 @@
                   <h1>Main Changes</h1>
                   <div class="intro--options">
                     <a>
-                      <h3>Time Tracking</h3>
+                      <h3>Block bookmarks if you don't want to see any content</h3>
                       <p>
-                        We have added new features to help you see how bad
-                        things are when you consume too much.
+                        We have added new features to help you see less of what you do not want to see. If you want to see something, you'll be able to see the following content and your bookmarks. Nothing more. Plus, your time spent will be tracked.
                       </p>
                     </a>
                     <a>
-                      <h3>Get notified when changes apply</h3>
+                      <h3>Advanced URL check</h3>
                       <p>
-                        Because we are on this journey together, you will hear
-                        from us when we implement features that may affect the
-                        way you experience X.
+                        We have restructured the entire extension to work even more efficiently than before.
                       </p>
                     </a>
                     <a>
-                      <h3>URL Redirect if you consume on profile</h3>
+                      <h3>Advanced URL redirect</h3>
                       <p>
-                        If you are consuming content within someone else's
-                        profile and you have switched off the apperence of the
-                        feed, you will not be able to access that part.
+                        X has added even more paths that can lead to more distractions. If you end up there without wanting to consume content, you'll be automatically redirected.
                       </p>
                     </a>
                   </div>
