Updated support link for buymeacoffee

--- a/pages/update.html
+++ b/pages/update.html
@@ -52,7 +52,7 @@
                   <div class="intro--banner">
                     <h1>
                       Version<br />
-                      <div class="introName">1.0.13</div>
+                      <div class="introName">1.0.16</div>
                       is out!
                     </h1>
                     <button id="tryItOut">
@@ -64,21 +64,11 @@
                   <h1>Main Changes</h1>
                   <div class="intro--options">
                     <a>
-                      <h3>Block bookmarks if you don't want to see any content</h3>
+                      <h3>Support links adaptations</h3>
                       <p>
-                        We have added new features to help you see less of what you do not want to see. If you want to see something, you'll be able to see the following content and your bookmarks. Nothing more. Plus, your time spent will be tracked.
-                      </p>
-                    </a>
-                    <a>
-                      <h3>Advanced URL check</h3>
-                      <p>
-                        We have restructured the entire extension to work even more efficiently than before.
-                      </p>
-                    </a>
-                    <a>
-                      <h3>Advanced URL redirect</h3>
-                      <p>
-                        X has added even more paths that can lead to more distractions. If you end up there without wanting to consume content, you'll be automatically redirected.
+                        We’ve updated the support links based on user feedback,
+                        as some were previously reported as invalid. They should
+                        now be fully functional.
                       </p>
                     </a>
                   </div>
