--- a/popup.html
+++ b/popup.html
@@ -42,17 +42,24 @@
     </div>
 
     <p style="text-align: center" id="nameYear"></p>
-    <hr />
-    <div
-      style="text-align: center; margin-top: 10px"
-      title="Do you want to support my project?"
-    >
-      <a href="https://buymeacoffee.com/olivierlue8" target="_blank">
+    <div class="separator">How To Support Us</div>
+    <div class="underButtons">
+      <a
+        title="Rate us on the chrome store!"
+        href="https://chromewebstore.google.com/detail/x-feed-cleaner/nejdcgfebfamlgpggncmbpkcnefaiemk/reviews"
+        target="_blank"
+      >
+        <button>Rate US👍</button>
+      </a>
+      <a
+        href="https://buymeacoffee.com/olivierluethy"
+        target="_blank"
+        title="Do you want to support my project?"
+      >
         <img
           src="https://cdn.buymeacoffee.com/buttons/v2/default-orange.png"
           alt="Buy Me a Coffee"
-          width="125"
-          height="30"
+          class="coffee-button"
         />
       </a>
     </div>
