Added different image sizes + Buymeacoffee link adjustments

--- a/pages/FAQ.html
+++ b/pages/FAQ.html
@@ -86,7 +86,7 @@
           extension as much as we and our supporters do, we would be very
           grateful for a donation. Not much money? Even the smallest amount
           would make us smile.
-          <a href="https://buymeacoffee.com/olivierlue8">Here</a> you can donate
+          <a href="https://buymeacoffee.com/olivierluethy">Here</a> you can donate
           us at least a Coffee 😁👍
         </p>
       </div>
