--- a/pages/update.html
+++ b/pages/update.html
@@ -52,7 +52,7 @@
                   <div class="intro--banner">
                     <h1>
                       Version<br />
-                      <div class="introName">1.0.16</div>
+                      <div class="introName">1.0.17</div>
                       is out!
                     </h1>
                     <button id="tryItOut">
@@ -64,11 +64,10 @@
                   <h1>Main Changes</h1>
                   <div class="intro--options">
                     <a>
-                      <h3>Support links adaptations</h3>
+                      <h3>Our Website is Live!</h3>
                       <p>
-                        We’ve updated the support links based on user feedback,
-                        as some were previously reported as invalid. They should
-                        now be fully functional.
+                        We have created our website for the X-Feed Cleaner to represent
+                        and introduce our chrome based browser extension to the public. Have a look at it inside the extension's download page!
                       </p>
                     </a>
                   </div>
@@ -98,7 +97,7 @@
                     title="Do you want to support my project?"
                   >
                     <a
-                      href="https://buymeacoffee.com/olivierlue8"
+                      href="https://buymeacoffee.com/olivierluethy"
                       target="_blank"
                     >
                       <img
