--- a/pages/update.html
+++ b/pages/update.html
@@ -52,7 +52,7 @@
                   <div class="intro--banner">
                     <h1>
                       Version<br />
-                      <div class="introName">1.0.17</div>
+                      <div class="introName">1.0.18</div>
                       is out!
                     </h1>
                     <button id="tryItOut">
@@ -64,10 +64,9 @@
                   <h1>Main Changes</h1>
                   <div class="intro--options">
                     <a>
-                      <h3>Our Website is Live!</h3>
+                      <h3>Time calculation bug fix</h3>
                       <p>
-                        We have created our website for the X-Feed Cleaner to represent
-                        and introduce our chrome based browser extension to the public. Have a look at it inside the extension's download page!
+                        We've discovered a bug that causes the time at the end to be calculated incorrectly at some point.
                       </p>
                     </a>
                   </div>
